[package]
name = "blightmud"
version = "5.4.0"
description = "A terminal mud-client"
readme = "README.md"
license = "GPL3"
authors = ["Linus Probert"]
edition = "2021"
build = "build.rs"

[lib]
doctest = false
crate-type = ["rlib"]

[features]
default = ["spellcheck"]
text-to-speech = ["tts"]
spellcheck = ["hunspell-rs", "hunspell-sys"]

[dependencies]
libmudtelnet = "2.0.1"
termion = "4"
log = "0.4.27"
simple-logging = "2.0.2"
chrono = "0.4.40"
signal-hook = "0.3.17"
mlua =  { version = "0.10.3", features = ["lua54", "send", "vendored", "macros"] }
regex = "1.11.1"
strip-ansi-escapes = "0.2.1"
vte = "0.15.0"
timer = "0.2.0"
flate2 = "1.1.1"
pulldown-cmark-mdcat = { version = "2.7.1", default-features = false }
pulldown-cmark = "0.12.2"
syntect = "5.2.0"
serde = { version = "1.0.219", features = ['derive'] }
ron = "0.10.1"
anyhow = "1.0.98"
lazy_static = "1.5.0"
rs-complete = "1.3.1"
getopts = "0.2.21"
human-panic = "2.0.2"
tts = { version = "0.26.3", optional = true }
serde_json = "1.0.140"
git2 = "0.20.1"
rodio = "0.20.1"
notify-debouncer-mini = "0.6.0"
hunspell-rs = { version = "0.4.0", optional = true }
hunspell-sys = { version = "0.3.0", features = ['bundled'], optional = true }
rustls = { version = "0.23", default-features = false, features = ['ring', 'tls12', 'std'] }
webpki-roots = "0.26"
reqwest = { version = "0.12.15", default-features = false, features = ['blocking', '__rustls-ring', 'json'] }
socket2 = "0.5.9"

[dev-dependencies]
mockall = "0.13.1"
mockall_double = "0.3.1"
rustls-pemfile = "2.2"
env_logger = "0.11.6"

[profile.dev.package.hunspell-sys]
# fixes debug profile build errs from warnings of the form:
#   warning _FORTIFY_SOURCE requires compiling with optimization (-O)
opt-level = 3

[package.metadata.rpm]
package = "blightmud"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
blightmud = { path = "/usr/bin/blightmud" }
