[workspace]
members = ["crates/pulldown-cmark-blightmud"]

[package]
name = "blightmud"
version = "0.0.0" # Placeholder. Will be overridden in build.rs from git tags if available
description = "A terminal mud-client"
readme = "README.md"
license = "GPL3"
authors = ["Linus Probert"]
edition = "2021"
build = "build.rs"

[lib]
doctest = false
crate-type = ["rlib"]

[features]
default = ["spellcheck"]
text-to-speech = ["tts"]
spellcheck = ["hunspell-rs", "hunspell-sys"]

[dependencies]
libmudtelnet = "2.0.1"
termion = "4"
log = "0.4.29"
simple-logging = "2.0.2"
chrono = "0.4.44"
signal-hook = "0.4.3"
mlua =  { version = "0.11.6", features = ["lua54", "send", "vendored", "macros"] }
regex = "1.12.3"
strip-ansi-escapes = "0.2.1"
vte = "0.15.0"
timer = "0.2.0"
flate2 = "1.1.9"
pulldown-cmark-blightmud = { path = "crates/pulldown-cmark-blightmud", default-features = false }
syntect = "5.3.0"
serde = { version = "1.0.228", features = ['derive'] }
ron = "0.12.1"
anyhow = "1.0.102"
lazy_static = "1.5.0"
rs-complete = "1.3.1"
getopts = "0.2.24"
human-panic = "2.0.8"
tts = { version = "0.26.3", optional = true }
serde_json = "1.0.149"
git2 = "0.20.4"
rodio = "0.22.2"
notify-debouncer-mini = "0.6.0"
hunspell-rs = { version = "0.4.0", optional = true }
hunspell-sys = { version = "0.3.0", features = ['bundled'], optional = true }
rustls = { version = "0.23", default-features = false, features = ['ring', 'tls12', 'std'] }
webpki-roots = "1.0"
reqwest = { version = "0.12.28", default-features = false, features = ['blocking', '__rustls-ring', 'json'] }
socket2 = { version = "0.6.3", features = ['all'] }
mio = { version = "1.2", features = ["os-poll", "net"] }

encoding_rs = "0.8"
unicode-width = "0.2"

[dev-dependencies]
mockall = "0.14.0"
mockall_double = "0.3.1"
rustls-pemfile = "2.2"
env_logger = "0.11.10"

[profile.dev.package.hunspell-sys]
# fixes debug profile build errs from warnings of the form:
#   warning _FORTIFY_SOURCE requires compiling with optimization (-O)
opt-level = 3

[package.metadata.deb]
assets = [
    ["target/release/blightmud", "usr/bin/blightmud", "755"],
    ["resources/lua/types/blightmud.d.lua", "usr/share/blightmud/lua/types/blightmud.d.lua", "644"],
    ["resources/lua/types/luarc.json", "usr/share/blightmud/luarc.json", "644"],
]

[package.metadata.rpm]
package = "blightmud"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
blightmud = { path = "/usr/bin/blightmud" }
