[package]
name = "pulldown-cmark-blightmud"
description = "Render pulldown-cmark events to TTY"
readme = "README.md"
keywords = ["markdown", "less", "cat", "cmark"]
version = "2.7.1"
homepage = "https://github.com/blightmud/blightmud"
repository = "https://github.com/blightmud/blightmud"
categories = ["command-line-utilities"]
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2021"
rust-version = "1.74"

[features]
default = ["svg", "image-processing"]
svg = ["dep:resvg"]
image-processing = ["dep:image"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
anstyle = { version = "1.0.7", default-features = false }
mime = "0.3"
pulldown-cmark = "0.13"
syntect = { version = "5", features = ["parsing", "regex-fancy"] }
textwrap = { version = "0.16.1", default-features = false, features = ["unicode-linebreak", "unicode-width"] }
tracing = "0.1"
url = "2"
gethostname = "1.0.2"

# Optional for svg support
resvg = { version = "0.47.0", optional = true, default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
# Optional for image processing support; we deliberately build with default
# features to include all possible image formats
image = { version = "0.25.1", optional = true }

[dev-dependencies]
glob = "0.3.3"
similar-asserts = "1"
syntect = { version = "5", features = ["default-syntaxes"] }
temp-env = { version = "0.3.6", default-features = false }
insta = "1"
regex = { version = "1.10.6", default-features = false }

[build-dependencies]
syntect = { version = "5", features = ["plist-load", "dump-create"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", default-features = false, features = ["std", "termios", "system"] }

[target.'cfg(windows)'.dependencies]
terminal_size = "0.4.2"